Fixes squashing of images

--- a/app/assets/stylesheets/partials/_form.sass
+++ b/app/assets/stylesheets/partials/_form.sass
@@ -18,7 +18,7 @@ $med: 550px
   img
     @media only screen and (max-width: $first)
       width: 100% !important
-      height: auto !important
+      height: 100% !important
 
   #top_text,
   #bottom_text
